[package]
authors = ["Eden <rust@eden2.com>"]
description = "A 54-bit signed integer abstraction. Created for easier interop with GraphQL and Javascript."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "i54_"
repository = "https://github.com/trevyn/i54_"
version = "0.0.1"

[dependencies]
juniper = {version = "0.15", optional = true}
rusqlite = {version = "0.24", optional = true}
serde = {version = "1", features = ["derive"]}
thiserror = "1"
ux_serde = {version = "0.2", features = ["serde"]}

[dev-dependencies]
doc-comment = "0.3"
